style.css
html, body {
  font-family: 'Open Sans';
  margin: 0;
  padding: 0;
}

#startWrap {
  background: #e67e22;
  background: url('banner2.jpg');
  background-size: cover;
  box-sizing: border-box;
  height: 100vh;
  padding-top: 120px;
  width: 100%;
}

h1, h3 {
  color: white;
  font-family: 'Biryani';
  font-weight: 700;
  margin: 0;
  padding: 0;
  text-align: center;
}

h1 {
  font-size: 64px;
  padding-bottom: 20px;
}

h3 {
  font-size: 36px;
  padding-bottom: 40px;
}

#addressBox {
  border: none;
  height: 53px;
  margin: auto;
  position: relative;
  width: 650px;
}

#addressBox-inner {
  width: inherit;
}

#addressBox-input {
  border: none;
  font-family: 'Open Sans';
  font-size: 24px;
  padding:  10px;
  text-align: left;
  width: inherit;
}

#addressBox-link {
  background: #E67E22;
  box-sizing: border-box;
  color: white;
  font-size: 24px;
  height: 53px;
  padding: 12px;
  padding-left: 16px;
  position: absolute;
  right: 0;
  top: 0;
  width: 53px;
}

#addressBox-link:hover {
  background: #CC701E;
  cursor: pointer;
}


.page {
  position: relative;
}

.page h2 {
  font-size: 54px;
}

#prodWrap {
  background: #2B2E39;
  color: white;

  padding: 20px;
}

#prodContainer {
  display: flex;
  flex-direction: row;
  margin: auto;
  margin-bottom: 80px;
  margin-top: 80px;
  width: 1200px;
}

#prodItem1 {
  flex-grow: 1;
  width: 50%;
}

#prodItem2 {
  flex-grow: 1;
  width: 50%;
}


#productionWrap {
  background: #2B2E39;
  padding: 75px;
  display:none;
  position: relative;
}

#productionWrap-col1 {
  position: absolute;
  left: 25px;
}

#productionWrap-col2 {
  background: #353846;
  height: 500px;
  margin: auto;
  width: 900px;
}

#productionWrap-col3 {
  position: absolute;
  right: 25px;
}

#productionWrap-col3 ul {
  color: white;
  list-style: none;
}

#productionWrap-col3 ul li {
  /*background: #E67E22;*/
  border: #E67E22 solid 2px;
  font-size: 36px;
  font-weight: 900;
  margin: 15px 0;
  padding: 15px 40px;
  text-align: center;
  text-transform: uppercase;
}

#productionWrap-col3 ul li:hover {
  background: #E67E22;
  cursor: pointer;
}

#productionWrap-col3 ul li.selected {
  background: #B2621A;
  border: #B2621A solid 2px;
  cursor: not-allowed;
}

#productionWrap p {
  color: white;
}

/* EXTRA FIXES START */

#consumptionWrap-inner {
  display: flex;
  flex-direction: row;
  margin: auto;
  margin-bottom: 80px;
  margin-top: 80px;
  padding: 20px;
  width: 1200px;
}

#consumptionWrap-col1, #consumptionWrap-col2 {
  flex-grow: 1;
  width: 50%;
}

/* EXTRA FIXES END */

/*
#consumptionWrap-inner {
  margin: auto;
  margin-bottom: 80px;
  margin-top: 80px;
  padding: 20px;
  width: 1200px;
}

#consumptionCanvas {
  height: 400px;
  width: 600px;
}

#consumptionWrap-col2 {
  float: right;
  width: 500px;
}

*/

#investmentCanvas svg{
  margin:0 auto;
  display:inherit;
}
#investmentWrap {
  background: #2B2E39;
  padding: 75px;
  position: relative;
}

#investmentWrap-inner {
  margin: auto;
  width: 1200px;
}

#investmentWrap .canvas {
  background: #353846;

  margin: 20px 0;
  width: inherit;
}


#environmentWrap {
  background: url('forest.jpg');

  color: white;

  padding: 50px;
}

#environmentWrap-inner {
  margin: auto;
  width: 1400px;
}

#environmentWrap p {
  color: #F5F5F5;
  font-family: 'Biryani';
  font-size: 64px;
  font-weight: 600;
}

#environmentWrap p strong {
  color: white;
  font-weight: 900;
}

#furtherWrap-inner {
  display: flex;
  flex-direction: row;
  margin: auto;
  padding: 40px 0;
  width: 1200px;
}
#furtherWrap-inner .col1,#furtherWrap-inner .col2,#furtherWrap-inner .col3{
  box-sizing: border-box;
  flex-grow: 1;
  padding: 0 15px;
  width: 33%;
}
#furtherWrap-inner img {
  margin: 40px 0;
  width: 80%;
}

#furtherWrap-inner p {
  font-size: 20px;
}


#footerWrap {
  background: #2B2E39;
  color: white;
  padding: 25px 0;
}

#footerWrap p {
  font-size: 18px;
  text-align: center;
}

#footerWrap p a {
  color: #E67E22;
  text-decoration: none;
}

#footerWrap p a:hover {
  color: #CC701E;
  text-decoration: underline;
}






p {
  margin: 5px 0;
  font-size: 24px;
}

.slant {
  font-style: italic;
}

h2 {
  margin: 0;
}

.superlarge {
  display: block;
  font-size: 230px;
  font-weight: 900;
}

.centerText {
  text-align: center;
}

.canvas {
  background: #EEE;
}

.dark {
  color: white;
}

.label {

}

.bigNumber {
  font-family: 'Open Sans';
  font-size: 164px;
  font-weight: 100;
}


.axis2{
  fill:white;
}
@media (max-width: 1250px) {

  .addressBox {
    box-sizing: border-box;
    padding: 0 25px;
    width: 100%;
  }

  .addressBox-inner {

  }

  .page div {
    display: block;
  }
}

@media (max-width: 1200px) {
  #prodContainer {
    flex-direction: column;
  }

  #consumptionWrap-inner {
    box-sizing: border-box;
    flex-direction: column;
    padding: 40px;
    width: 100%;
  }

  #consumptionWrap-col1, #consumptionWrap-col2 {
    width: 100%;
  }
}

@media (max-width: 700px) {


  #furtherWrap-inner {
    flex-direction: column;
  }

  #furtherWrap-inner .col1, #furtherWrap-inner .col2, #furtherWrap-inner .col3 {
    box-sizing: border-box;
    flex-grow: 1;
    padding: 0 15px;
    width: 100%;
  }
}


#productionCanvas {
  height: 70%;
  width: 90%;
  padding: 100px;
  background-color: #2B2E39
}

.line {
 fill: none;
 stroke: green;
 stroke-width: px;
}

.line2 {
 fill: none;
 stroke: black;
 stroke-width: 3px;
}

#furtherWrap-inner div {
  display: flex;
  flex-direction: column;
  justify-content: center;
}

#furtherWrap {
  display: flex;
}

